# wreq-rb

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  wreq-rb.gemspec
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  cross-compile.yml  test.yml
.sisyphus/: ABSOLUTE_BLOCKER.md  BOULDER_COMPLETE.md  BOULDER_IMPOSSIBLE.md  BOULDER_LOOP_RESOLVED.md  BOULDER_STATUS.md  FINAL_STATUS.md  PROJECT_COMPLETE.md  boulder.json
.sisyphus/drafts/: wreq-migration.md
.sisyphus/notepads/wreq-migration/: BOULDER_RESOLUTION.md  FINAL_STATUS.md  completion-summary.md  decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: cleanup-obsolete.md  wreq-migration.md
benchmark/: benchmark_results.md  http_clients_benchmark.rb  http_clients_benchmark.rs  http_clients_benchmark.sh  rust_profiling_benchmark.rs
docs/: NETWORK_PROFILING.md  PROFILING.md
ext/wreq_rb/: Cargo.toml  extconf.rb
ext/wreq_rb/src/: decompress.rs  gvl.rs  lib.rs
lib/: wreq_rb.rb
lib/wreq_rb/: version.rb
script/: generate_benchmark_chart.rb  generate_combined_chart.rb  visualize_benchmarks.rb
test/: content_length_test.rb  gvl_release_test.rb  http_protocol_test.rb  wreq_test.rb
